--- a/app/globals.css
+++ b/app/globals.css
@@ -2,12 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+:root, html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+#__next {
+  height: 100%; /* Ensure Next.js root div takes full height */
 }
 
 @layer base {
