--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,24 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .scrollbar-custom {
+    scrollbar-width: thin; /* Makes scrollbar thin (Firefox) */
+    scrollbar-color: #000000 #edf2f7; /* Thumb and track colors for Firefox */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 4px; /* Width of the scrollbar */
+    height: 4px; /* Height of the horizontal scrollbar */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: #4a5568; /* Dark gray for thumb */
+    border-radius: 4px; /* Rounded corners for thumb */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background-color: #edf2f7; /* Light gray for track */
+  }
+}
